# gdcm-unity

./: .gitignore  .gitmodules  LICENSE  README.md
Assets/gdcm/: gdcm.asmdef  gdcm.asset  gdcm.cs  gdcmExample.cs
Assets/gdcm/NativeSource~/: CMakeLists.txt
Assets/gdcm/NativeSource~/CMake/: CMakeLists.txt
Assets/gdcm/NativeSource~/Source/: CMakeLists.txt
Assets/gdcm/Plugins/WebGL/: PluginJS.jslib
Assets/gdcmunity/: gdcmunity.asmdef  gdcmunity.asset  gdcmunity.cs  gdcmunityExample.cs
Assets/gdcmunity/NativeSource~/: CMakeLists.txt
Assets/gdcmunity/NativeSource~/Source/: Plugin.cpp
Assets/gdcmunity/Plugins/WebGL/: PluginJS.jslib
ProjectSettings/: ProjectSettings.asset
